--- a/index.html
+++ b/index.html
@@ -7,38 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js"></script>
-    <script>
-        //1 задание
-        var Tc = prompt("Введите температуру");
-        var Tf = (9 / 5) * Tc + 32
-        alert("Температура по фарингейту " + Tf);
-        /*
-        2 задание
-        a = a + b;
-        b = a - b;
-        a = a - b;
-        */
-        //3 задание
-        var name = '"Василий"', admin = name;
-        alert(admin);
-        /*
-        4 задание
-        Ответ: 1000108
-        5 задание
-        Атрибут defer позволяет браузеру обрабатывать страницу и загружать скрипт в фоновом режиме(запуск скрипта произойдет сразу-же после загрузки)
-        Атрибут async означает что скрипт абсолютно независим(Cтраница не ждет скриптов, содержимое обрабатываеться и отображаеться.)
-        */
-
-
-
-
-
-
-
-
-
-
-    </script>
+    <script src="lesson-1.js"></script>
+    <script src="lesson-2.js"></script>
 </head>
 
 <body>
